--- a/Umer/solutions.css
+++ b/Umer/solutions.css
@@ -7,15 +7,12 @@
 }
 
 #english {
+  /* display: none; */
   height: 30px;
-  /* width: 100%; */
-  display: flex;
   flex-direction: row;
   background-color: aliceblue;
   text-align: center;
-  /* font-size: 20px; */
   color: rgb(100, 118, 152);
-
   padding-left: 80%;
   padding-top: 1%;
 }
@@ -73,6 +70,7 @@ header {
   flex-direction: row;
   text-align: center;
   margin-bottom: 8%;
+  /* width: 100%; */
 }
 
 #navbar a {
@@ -94,6 +92,7 @@ header {
 
 #login {
   margin-left: 12%;
+  display: flex;
 }
 
 #login a {
@@ -101,7 +100,11 @@ header {
   color: rgb(0, 107, 255);
 }
 
+#login > #lgin {
+  padding-top: 10px;
+}
 #login button {
+  cursor: pointer;
   padding: 10px;
   background-color: rgb(0, 107, 255);
   border: 1px solid rgb(0, 107, 255);
@@ -113,12 +116,12 @@ header {
 }
 
 .solutions {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 125px;
-  /* border: 2px solid black; */
   gap: 24px;
 }
 
@@ -746,9 +749,12 @@ header {
 
 @media screen and (max-width: 1000px) {
   body {
-    /* width: 80%; */
+    width: 80%;
   }
 
+  #navbar {
+    width: 100%;
+  }
   #navbar > a {
     margin-left: 10px;
   }
@@ -774,7 +780,11 @@ header {
 
 @media screen and (max-width: 700px) {
   body {
-    /* width: 100%; */
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  #navbar {
   }
 
   #english {
@@ -789,19 +799,16 @@ header {
   }
   #ham {
     display: contents;
-    /* font-size: larger; */
   }
   #ham .material-icons {
     font-size: 40px;
     margin-left: 60%;
-    /* margin-right: 4%; */
   }
   #ham:hover {
     cursor: pointer;
   }
   .solutions {
     text-align: center;
-    margin-left: 50px;
   }
 
   .hdd > h1 {
@@ -819,15 +826,15 @@ header {
   .soln_for_every_role {
     display: flex;
     flex-direction: column;
+    padding: 0 1rem;
   }
 
   .left {
-    width: 100%;
+    width: 90%;
+    margin-left: 0 !important;
   }
 
   .right > img {
-    /* height: 300px;
-    width: 400px; */
     margin-left: 100px;
   }
 
@@ -892,7 +899,13 @@ header {
 
 @media screen and (max-width: 500px) {
   body {
-    width: 100%;
+    /* width: 100%; */
+    border: 1px solid red;
+    overflow-x: hidden !important;
+  }
+
+  header {
+    /* position: relative; */
   }
   #ham .material-icons {
     font-size: 40px;
@@ -901,7 +914,6 @@ header {
   }
   .solutions {
     /* text-align: center; */
-    margin-left: 70px;
     width: 100%;
   }
 
@@ -915,18 +927,44 @@ header {
     margin-left: 70px;
   }
 
+  .right {
+    width: 100%;
+  }
   .right > img {
-    /* height: 300px;
-    width: 400px; */
-    margin-left: 70px;
+    margin: 0px;
+    height: 400px;
+    width: 450px;
+    margin-left: 10px;
+    margin-top: 20px;
+  }
+
+  .solns_by_ind {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* position: relative; */
   }
 
   .ind_headings > h2 {
-    margin-left: 100px;
+    margin-top: 10px;
   }
 
   .ind_headings > h1 {
     font-size: 1.75rem;
-    margin-left: 100px;
+  }
+
+  .leftside > img {
+    overflow-x: hidden;
+    height: 400px;
+    width: 500px;
+    /* position: absolute; */
+  }
+
+  .rightside {
+    /* margin: 80%; */
+  }
+
+  .rightside > #acch3 {
+    font-size: 10px;
   }
 }
