--- a/karndip/styel.css
+++ b/karndip/styel.css
@@ -360,7 +360,7 @@ header {
   margin-right: 40px;
   margin-top: 70px;
 }
-       /*----------------- automation css -------------- */
+/*----------------- automation css -------------- */
 .automation h3 {
   font-size: 2.375rem;
   line-height: 1.2;
@@ -384,19 +384,18 @@ section {
   /* padding:30px; */
 }
 
-
 /*-------------- video part css-----------------*/
 section {
   display: flex;
   justify-content: center;
 }
-footer img {
+.footers img {
   object-fit: cover;
   width: 72px;
-  min-width: auto;
+
   max-width: 100%;
   height: 72px;
-  min-height: auto;
+
   max-height: 100%;
   border-radius: 50%;
 }
@@ -412,7 +411,7 @@ footer img {
   line-height: 1.6;
   font-weight: 400;
 }
-footer {
+.footer {
   display: flex;
   align-items: center;
   gap: 20px;
@@ -438,13 +437,115 @@ footer {
 .sub-child {
   gap: px;
 }
-
-
-
-
-
-
 /* ----------------------------- */
+
+/*------------ form section css------------ */
+
+section {
+  background-color: rgb(244, 248, 255);
+}
+.span1 {
+  display: flex;
+  align-items: center;
+}
+.span20 {
+  color: rgb(0, 107, 255);
+  font-size: 40px;
+  margin-right: 20px;
+}
+.childdemo {
+  /* border: 1px solid red; */
+  /* height: 700px; */
+  display: inline-block;
+  margin-right: 80px;
+}
+.contact a {
+  cursor: pointer;
+  color: rgb(0, 107, 255);
+  font-size: 1.125rem;
+  line-height: 1.6;
+  position: relative;
+  height: fit-content;
+  flex-direction: row;
+  display: inline-flex;
+  opacity: 1;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  border-radius: 8px;
+  text-align: left;
+  font-weight: 600;
+  text-decoration: none;
+}
+.childdemo h6 {
+  width: 100%;
+  margin-bottom: 32px;
+  text-align: left;
+  color: rgb(0, 107, 255);
+  font-size: 1rem;
+  line-height: 1.2;
+  font-weight: 600;
+  letter-spacing: 1.25px;
+}
+.form {
+  display: inline-block;
+  margin-bottom: 6px;
+  color: rgb(11, 53, 88);
+  line-height: 1.5;
+  font-size: 1.125rem;
+  font-weight: 600;
+  padding: 52px;
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(231, 237, 246);
+  border-radius: 8px;
+  box-shadow: rgba(45, 40, 77, 0.1) 0px 12px 32px;
+  width: 500px;
+}
+.maindivdemo {
+  display: flex;
+  justify-content: space-evenly;
+  height: 200vh;
+}
+.First {
+  height: 49px;
+  padding: 10px 14px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  border: 1px solid rgb(166, 187, 209);
+  box-shadow: rgba(16, 24, 40, 0.05) 0px 1px 2px;
+  color: rgb(0, 0, 0);
+  line-height: 1.6;
+  font-size: 1.125rem;
+  /* width: 100% !important; */
+}
+.submitbutton {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+
+  justify-content: center;
+  align-items: center;
+  padding: 16px 40px;
+  color: rgb(255, 255, 255);
+  font-size: 1.1rem;
+  line-height: 1.4;
+  font-weight: 600;
+  background: rgb(0, 107, 255);
+  border-radius: 8px;
+  margin-top: 10px;
+}
+.textareaform {
+  margin-top: 14px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 8px;
+  border: 1px solid rgb(166, 187, 209);
+  box-shadow: rgba(16, 24, 40, 0.05) 0px 1px 2px;
+  color: rgb(0, 0, 0);
+  line-height: 1.6;
+  font-size: 0.9rem;
+}
+
+/* --------------------------- */
 #login {
   margin-left: 12%;
 }
