--- a/Umer/solutions.css
+++ b/Umer/solutions.css
@@ -6,6 +6,11 @@
   font-family: "Montserrat", sans-serif;
 }
 
+body {
+  border: 2px solid red;
+  width: 100%;
+}
+
 #english {
   /* display: none; */
   height: 30px;
@@ -722,7 +727,7 @@ header {
   overflow: hidden;
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
   body {
     width: 90%;
   }
@@ -745,10 +750,10 @@ header {
   .rightside {
     margin-left: 100px;
   }
-}
+} */
 
-@media screen and (max-width: 1000px) {
-  body {
+@media screen and (max-width: 1024px) {
+  /* body {
     width: 80%;
   }
 
@@ -775,10 +780,29 @@ header {
     margin-left: 50px;
     height: 400px;
     width: 400px;
+  } */
+
+  body {
+    /* border: 2px solid red; */
+    overflow-x: hidden !important;
+    width: 100%;
+  }
+
+  #calendlyimage > img {
+  }
+  header {
+    width: 10%;
+  }
+
+  #navbar > a {
+    margin-left: 20px;
+  }
+
+  #login > #lgin {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   body {
     width: 100%;
     overflow-x: hidden;
@@ -802,7 +826,7 @@ header {
   }
   #ham .material-icons {
     font-size: 40px;
-    margin-left: 60%;
+    margin-left: 500px;
   }
   #ham:hover {
     cursor: pointer;
@@ -831,7 +855,7 @@ header {
 
   .left {
     width: 90%;
-    margin-left: 0 !important;
+    margin-left: 20px !important;
   }
 
   .right > img {
@@ -844,7 +868,7 @@ header {
   }
 
   .solns_by_ind > .rightside {
-    width: 100%;
+    width: 80%;
     margin-left: 50px;
   }
 
@@ -854,36 +878,43 @@ header {
   }
 
   .chris_williams > .leftyy {
-    width: 100%;
+    width: 80%;
     margin-left: 50px;
+  }
+
+  .leftyy > p {
+    font-size: 25px;
   }
 
   .chris_williams > .rightyyy > img {
     height: 500px;
     width: 600px;
+    margin-left: 100px;
   }
 
   .scheduling {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 70%;
     margin-left: 70px;
   }
 
+  .lside {
+    width: 100%;
+  }
   .lside > h1 {
     font-size: 18px;
-    /* text-align: center; */
+    text-align: center;
+    /* margin-left: 100px; */
   }
 
   .lside > p {
     font: 15px;
-    width: 100%;
   }
 
   .rside {
     margin-top: 20px;
+    width: 100%;
   }
   .rside > #sign {
     font-size: 15px;
@@ -895,12 +926,23 @@ header {
     font-size: 15px;
     padding: 10px;
   }
+
+  #Ef {
+    display: flex;
+    flex-direction: column;
+  }
+  #Ef {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer2 #footer2b {
+    margin-left: 20px;
+  }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 425px) {
   body {
     /* width: 100%; */
-    border: 1px solid red;
     overflow-x: hidden !important;
   }
 
@@ -966,5 +1008,31 @@ header {
 
   .rightside > #acch3 {
     font-size: 10px;
+  }
+  #footer2 {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer2 #footer2a {
+    margin-bottom: 20px;
+  }
+  #footer2 #footer2b {
+    margin-bottom: 20px;
+  }
+  #footer2 #footer2c {
+    margin-bottom: 20px;
+  }
+  #footer3 {
+    display: flex;
+    flex-direction: column;
+  }
+  #footer3 #footer3a {
+    margin-bottom: 20px;
+  }
+  #footer3 #footer3b {
+    margin-bottom: 20px;
+  }
+  #footer3 #footer3c {
+    margin-bottom: 20px;
   }
 }
