--- a/Umer/solutions.css
+++ b/Umer/solutions.css
@@ -753,8 +753,8 @@ header {
 } */
 
 @media screen and (max-width: 1024px) {
-  /* body {
-    width: 80%;
+  body {
+    width: fit-content%;
   }
 
   #navbar {
@@ -780,32 +780,12 @@ header {
     margin-left: 50px;
     height: 400px;
     width: 400px;
-  } */
-
-  body {
-    /* border: 2px solid red; */
-    overflow-x: hidden !important;
-    width: 100%;
-  }
-
-  #calendlyimage > img {
-  }
-  header {
-    width: 10%;
-  }
-
-  #navbar > a {
-    margin-left: 20px;
-  }
-
-  #login > #lgin {
   }
 }
 
 @media screen and (max-width: 768px) {
   body {
-    width: 100%;
-    overflow-x: hidden;
+    width: fit-content;
   }
 
   #navbar {
@@ -940,99 +920,14 @@ header {
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 426px) {
   body {
-    /* width: 100%; */
-    overflow-x: hidden !important;
+    width: fit-content;
   }
 
-  header {
-    /* position: relative; */
-  }
-  #ham .material-icons {
-    font-size: 40px;
-    margin-left: 55%;
-    /* margin-right: 4%; */
-  }
-  .solutions {
-    /* text-align: center; */
-    width: 100%;
-  }
-
-  .hdd > h1 {
-    font-size: 30px;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .left {
-    margin-left: 70px;
-  }
-
-  .right {
-    width: 100%;
-  }
-  .right > img {
-    margin: 0px;
-    height: 400px;
-    width: 450px;
-    margin-left: 10px;
-    margin-top: 20px;
-  }
-
-  .solns_by_ind {
-    width: 100%;
+  .two_btn {
     display: flex;
     flex-direction: column;
-    /* position: relative; */
-  }
-
-  .ind_headings > h2 {
-    margin-top: 10px;
-  }
-
-  .ind_headings > h1 {
-    font-size: 1.75rem;
-  }
-
-  .leftside > img {
-    overflow-x: hidden;
-    height: 400px;
-    width: 500px;
-    /* position: absolute; */
-  }
-
-  .rightside {
-    /* margin: 80%; */
-  }
-
-  .rightside > #acch3 {
-    font-size: 10px;
-  }
-  #footer2 {
-    display: flex;
-    flex-direction: column;
-  }
-  #footer2 #footer2a {
-    margin-bottom: 20px;
-  }
-  #footer2 #footer2b {
-    margin-bottom: 20px;
-  }
-  #footer2 #footer2c {
-    margin-bottom: 20px;
-  }
-  #footer3 {
-    display: flex;
-    flex-direction: column;
-  }
-  #footer3 #footer3a {
-    margin-bottom: 20px;
-  }
-  #footer3 #footer3b {
-    margin-bottom: 20px;
-  }
-  #footer3 #footer3c {
-    margin-bottom: 20px;
+    width: 50%;
   }
 }
