--- a/karndip/styel.css
+++ b/karndip/styel.css
@@ -85,14 +85,14 @@ header {
 #navbar :first-child {
   color: rgb(0, 107, 255);
 }
+#head #ham {
+  content-visibility: hidden;
+}
 
 .belowheader {
   display: flex;
   justify-content: center;
-  /* margin-top: 120px; */
-
   align-items: center;
-  /* font-weight: 700; */
   width: 100%;
 }
 .belowheader img {
@@ -124,7 +124,7 @@ header {
   padding: 10px 18px;
   /* line-height: 1.6; */
   display: inline-flex;
-  opacity: 1;
+  /* opacity: 1; */
   background-color: transparent;
   border-radius: 15px;
   cursor: pointer;
@@ -145,6 +145,7 @@ header {
 }
 .material-symbols-outlined {
   color: rgb(0, 107, 255);
+ 
 }
 .chat {
   color: rgb(0, 107, 255);
@@ -153,6 +154,7 @@ header {
   border-radius: 5px;
   cursor: pointer;
   margin-left: 25px;
+
 }
 
 * {
@@ -162,8 +164,6 @@ header {
 .svg img {
   margin-right: 60px;
   justify-content: space-around;
-  /* width: 130px;
-  height: 19px; */
   height: 24px;
   width: auto;
   max-width: 132px;
@@ -174,13 +174,13 @@ header {
   width: 100vw;
   display: inline-block;
 }
-
+/* -----Accomplish part css---------- */
 .box {
   border: 1px solid rgba(140, 142, 162, 0.182);
   padding: 19px;
   border-radius: 9px;
   font-size: 1.25rem;
-  /* box-shadow: 0 5px 10px rgba(0,0,0,0.2); */
+ 
   text-align: left;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -208,7 +208,6 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 30px;
-  /* align-items: center; */
 }
 .flex-container h3 {
   color: rgb(11, 53, 88);
@@ -286,18 +285,6 @@ header {
   font-weight: 700;
 }
 .container3 .box-container {
-  /* display: grid;
-  width: 100%;
-  margin: auto;
-  height: auto;
-  display: grid;
-  grid-template-columns: repeat(4, minmax(267px, min(22.5%, 370px)));
-  gap: 40px;
-  justify-content: center;
-  text-align: center;
-  align-items: stretch;
-  padding: 15px;
-  z-index: 10; */
   display: flex;
   gap: 15px;
   margin-top: 30px;
