fixing final media query

--- a/ajay/styel.css
+++ b/ajay/styel.css
@@ -2697,6 +2697,7 @@ footer {
         flex-direction: column;
         height: 100vh;
         margin-top: 50%;
+        margin-bottom: 95%;
 
     }
     #together{
